# 5-template

./: CMakeLists.txt  README.md
.github/workflows/: test.yml
scripts/: test.sh
src/: CMakeLists.txt
test/comparer/: checker.py
test/comparer/test_data/diff/different_img_can_compare/: output.txt
test/converter/: checker.py
